--- a/index.html
+++ b/index.html
@@ -12,19 +12,19 @@
 </head>
 <body>
     <header class="cabecalho">
-        <img class="cabecalho-imagem" src="images.jpeg" alt="logo da alura start">
+        <img class="cabecalho-imagem" src="images.jpeg" alt="imagem skate">
         <ul class="cabecalho-lista">
             <li class="cabecalho-lista-item">Escola</li>
-            <li class="cabecalho-lista-item">Estudante</li>
+            <li class="cabecalho-lista-item">Skate</li>
         </ul>
     </header>
     <section class="escola">
         <div class="escola-div-conteudo">
             <h2 class="escola-titulo">Sobre a Escola</h2>
             <p class="escola-texto-um">Na escola de skate aprendemos a voar baixo e  aterrissar com estilo.</p>
-            <p class="escola-texto-dois">A turma é ousada, unida e sempre empolgada para superar novos desafios</p>
+            <p class="escola-texto-dois">A turma é ousada, unida e sempre empolgada para superar novos desafios.</p>
         </div>
-        <img class="escola-imagem" src="Formula-bro.png" alt="imagem que representa uma professora em sala de aula">
+        <img class="escola-imagem" src="1_pista___skate___ferias___beira___mar___50_-19261767.jpg" alt="imagem que representa uma professora em sala de aula">
     </section>
     <section class="estudante">
         <h2 class="estudante-titulo">Quem são nossos estudantes?</h2>
