--- a/index.html
+++ b/index.html
@@ -33,21 +33,21 @@
         <div class="estudante-div">
             <img class="estudante-imagem" src="HyperX_Skatista.jpg" alt="foto do marcelo">
             <h3 class="estudante-nome">Marcelo</h3>
-            <a href="https://github.com/marcelopaludetto"><img class="estudante-icone" src="github.png" alt="icone github"></a>
+            <a href="https://github.com/marcelopaludetto"><img class="estudante-icone" src="github-512.webp" alt="icone github"></a>
             <a href="https://linkedin.com/marcelopaludetto"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
             <a href="https://instagram.com/marcelopaludetto"><img class="estudante-icone" src="images.png" alt="icone instagram"></a>
         </div>
         <div class="estudante-div">
             <img class="estudante-imagem" src="whatsapp-image-2022-09-12-at-16.13.27.webp" alt="foto da gabi">
             <h3 class="estudante-nome">Gabriela</h3>
-            <a href="https://github.com/GabrielaM-L"><img class="estudante-icone" src="github.png" alt="icone github"></a>
+            <a href="https://github.com/GabrielaM-L"><img class="estudante-icone" src="github-512.webp" alt="icone github"></a>
             <a href="https://www.linkedin.com/in/gabriela-marcomini-de-lima/"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
             <a href="https://www.instagram.com/gabriela_marcomini/"><img class="estudante-icone" src="images.png" alt="icone instagram"></a>
         </div>
         <div class="estudante-div">
             <img class="estudante-imagem" src="thais-gazarra-skate-53.webp" alt="foto da lizandra">
             <h3 class="estudante-nome">Lizandra</h3>
-            <a href="https://github.com/LizandraDuarte40"><img class="estudante-icone" src="github.png" alt="icone github"></a>
+            <a href="https://github.com/LizandraDuarte40"><img class="estudante-icone" src="github-512.webp" alt="icone github"></a>
             <a href="https://www.linkedin.com/in/lizandrarlm-duarte/"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
             <a href="https://www.instagram.com/lizandrarlm"><img class="estudante-icone" src="images.png" alt="icone instagram"></a>
         </div>
@@ -56,14 +56,14 @@
         <div class="estudante-div">
             <img class="estudante-imagem" src="images (1).jpeg" alt="foto da joice">
             <h3 class="estudante-nome">Joice</h3>
-            <a href="https://github.com/JoiceAlura"><img class="estudante-icone" src="github.png" alt="icone github"></a>
+            <a href="https://github.com/JoiceAlura"><img class="estudante-icone" src="github-512.webp" alt="icone github"></a>
             <a href="https://www.linkedin.com/in/joicebarbaresco/"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
             <a href="https://www.instagram.com/joicebarbaresco/"><img class="estudante-icone" src="images.png" alt="icone instagram"></a>
         </div>
         <div class="estudante-div">
             <img class="estudante-imagem" src="vans_brasil_skatebrasil-scaled.jpg" alt="foto da maria">
             <h3 class="estudante-nome">Maria</h3>
-            <a href="https://github.com/MagePSR"><img class="estudante-icone" src="github.png" alt="icone github"></a>
+            <a href="https://github.com/MagePSR"><img class="estudante-icone" src="github-512.webp" alt="icone github"></a>
             <a href="https://www.linkedin.com/in/mariageovanna"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
             <a href="https://www.instagram.com/magpsr/"><img class="estudante-icone" src="images.png" alt="icone instagram"></a>
         </div>
@@ -71,7 +71,7 @@
             <img class="estudante-imagem" src="images (2).jpeg" alt="foto da olhe">
             <h3 class="estudante-nome">Olivia</h3>
             <img class="estudante-icone" src="github.png" alt="icone github">
-            <a href="https://www.linkedin.com/in/olhe/"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
+            <a href="https://www.linkedin.com/in/olhe/"><img class="estudante-icone" src="github-512.webp" alt="icone linkedin"></a>
             <a href="https://github.com/olhe12"><img class="estudante-icone" src="images.png" alt="icone instagram"></a>
         </div>
         <span></span>
@@ -79,14 +79,14 @@
         <div class="estudante-div">
             <img class="estudante-imagem" src="Karolzinha-skatista-alagoana-1024x682.jpg" alt="foto da rafa">
             <h3 class="estudante-nome">Rafaela</h3>
-            <a href="https://github.com/rafaelamunhoz12"><img class="estudante-icone" src="github.png" alt="icone github"></a>
+            <a href="https://github.com/rafaelamunhoz12"><img class="estudante-icone" src="github-512.webp" alt="icone github"></a>
             <a href="http://linkedin.com/in/rafaela-felix-munhoz-oliveira-02160a10a"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
             <a href="https://www.instagram.com/rafafmo/"><img class="estudante-icone" src="images.png" alt="icone instagram"></a>
         </div>
         <div class="estudante-div">
             <img class="estudante-imagem" src="direto-da-fonte-do-streetwear-o-estilo-skatista-e-a-febre-do-momento-cropped-20220624204031 (1).webp" alt="foto da thais">
             <h3 class="estudante-nome">Thais</h3>
-            <a href="https://github.com/Thaispianucci"><img class="estudante-icone" src="github.png" alt="icone github"></a>
+            <a href="https://github.com/Thaispianucci"><img class="estudante-icone" src="github-512.webp" alt="icone github"></a>
             <a href="https://www.linkedin.com/in/thais-pianucci-benedicto-54a9a416/"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
             <a href="https://www.instagram.com/thaispianucci/"><img class="estudante-icone" src="images.png" alt="icone instagram"></a>
         </div>
