--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
         <div class="estudante-div">
             <img class="estudante-imagem" src="images (2).jpeg" alt="foto da olhe">
             <h3 class="estudante-nome">Olivia</h3>
-            <img class="estudante-icone" src="github.png" alt="icone github">
-            <a href="https://www.linkedin.com/in/olhe/"><img class="estudante-icone" src="github-512.webp" alt="icone linkedin"></a>
+            <img class="estudante-icone" src="github-512.webp" alt="icone github">
+            <a href="https://www.linkedin.com/in/olhe/"><img class="estudante-icone" src="d9d95ee468e97317a201ef33b02067ac.jpg" alt="icone linkedin"></a>
             <a href="https://github.com/olhe12"><img class="estudante-icone" src="images.png" alt="icone instagram"></a>
         </div>
         <span></span>
